update dist task to pick up on sql files needed for first time install or upgrade.

--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -187,6 +187,16 @@ task dist(type:Zip){
         include '*'
         into('api-docs')
     }
+    from('../mifosng-db/') {
+        fileMode = 0755
+        include '*.sql'
+        into('database')
+    }
+    from('../mifosng-db/migrations') {
+        fileMode = 0755
+        include '**/*'
+        into('database/migrations')
+    }
     from war.outputs.files
     into('mifosplatform' + version)
 }
