--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -160,7 +160,8 @@ dependencies {
 	            [group: 'com.lowagie', name: 'itext-rtf', version: '2.1.7'],
 				[group: 'org.mnode.ical4j', name: 'ical4j', version: '1.0.4'],
                 [group: 'com.googlecode.flyway', name: 'flyway-maven-plugin', version: '2.1.1'],
-                [group: 'org.quartz-scheduler', name: 'quartz', version: '2.1.7']
+                [group: 'org.quartz-scheduler', name: 'quartz', version: '2.1.7'],
+                [group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.2.1']
  	        )
 
  	 testCompile 'junit:junit:4.11',
