fix file name : fails on *nix due to case sensitivity

--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -226,7 +226,7 @@ war {
 }
 
 license {
-    header rootProject.file('../LICENSE.MD')
+    header rootProject.file('../LICENSE.md')
     strictCheck true
 }
 
