adding support for pentaho report localization

--- a/mifosng-provider/src/main/pentahoReports/incomeStatement.properties
+++ b/mifosng-provider/src/main/pentahoReports/incomeStatement.properties
@@ -8,8 +8,8 @@ expenses=Expenses
 totalExpenses=Total Expenses :
 netIncome=Net Income :
 branchName=Branch :
-from=From :
-to=To :
+period=Period:
+to=To
 PrintedBy\:=Printed by:
 On\:=On:
 Page=Page  
