--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -163,8 +163,7 @@ dependencies {
                 [group: 'org.quartz-scheduler', name: 'quartz', version: '2.1.7'],
                 [group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.2.1'],
                 
-                [group: 'com.google.code.simple-spring-memcached', name: 'xmemcached-provider', version: '3.2.0'],
-                [group: 'com.google.code.simple-spring-memcached', name: 'spring-cache', version: '3.2.0']
+                [group: 'net.sf.ehcache', name: 'ehcache', version: '2.7.2']
  	        )
 
  	 testCompile 'junit:junit:4.10',
