--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -54,6 +54,8 @@ configurations {
 	all*.exclude group: 'commons-logging'
 }
 
+sourceSets.test.compileClasspath += sourceSets.main.compileClasspath
+
 dependencies {
         def tomcatVersion = '7.0.47'
 	    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
@@ -230,6 +232,8 @@ tomcatRunWar {
 
 sourceSets {
     integrationTest {
+    	compileClasspath += main.output + test.output
+        runtimeClasspath += main.output + test.output
     }
 }
 
