Fix Flyway Core vs. Maven plug-in mess
Signed-off-by: Michael Vorburger <mike@vorburger.ch>

--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -138,7 +138,7 @@ dependencies {
 	            [group: 'com.lowagie', name: 'itext', version: '2.1.7'],
 	            [group: 'com.lowagie', name: 'itext-rtf', version: '2.1.7'],
 				[group: 'org.mnode.ical4j', name: 'ical4j', version: '1.0.4'],
-                [group: 'com.googlecode.flyway', name: 'flyway-maven-plugin', version: '2.1.1'],
+	            [group: 'com.googlecode.flyway', name: 'flyway-core', version: '2.1.1'],
                 [group: 'org.quartz-scheduler', name: 'quartz', version: '2.1.7'],
                 [group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.2.1'],
                 [group: 'net.sf.ehcache', name: 'ehcache', version: '2.7.2'],
