--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -140,7 +140,8 @@ dependencies {
 
 				// Although Mifos (at the time of writing) doesn't have any compile time dep. on this,
 				// it's useful to have this for the Spring Boot TestRestTemplate http://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/#boot-features-rest-templates-test-utility
-                [group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.2.3']
+				// Commenting out this dependency due to error observed in Cloudbees https://openmf.ci.cloudbees.com/job/MIFOSX%20INTEGRATION%20TEST/828/testReport/org.mifosplatform.integrationtests/AccountTransferTest/testFromLoanToSavingsAccountTransfer/ (Unsupported cookie spec..)
+               // [group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.2.3']
      )
 	 testCompile 'junit:junit:4.11',
 				 'junit:junit-dep:4.11',
