--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -140,7 +140,7 @@ dependencies {
 
 				// Although Mifos (at the time of writing) doesn't have any compile time dep. on this,
 				// it's useful to have this for the Spring Boot TestRestTemplate http://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/#boot-features-rest-templates-test-utility
-                [group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.2.3'],
+                //[group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.2.3'],
                 [group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1']
      )
 	 testCompile 'junit:junit:4.11',
