--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -140,13 +140,12 @@ dependencies {
 
 				// Although Mifos (at the time of writing) doesn't have any compile time dep. on this,
 				// it's useful to have this for the Spring Boot TestRestTemplate http://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/#boot-features-rest-templates-test-utility
-                //[group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.2.3'],
-                [group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1']
+                [group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.3.5']
      )
 	 testCompile 'junit:junit:4.11',
 				 'junit:junit-dep:4.11',
                  'org.mockito:mockito-core:1.9.5',
-                 'com.jayway.restassured:rest-assured:1.7.2',
+                 'com.jayway.restassured:rest-assured:2.3.3',
 				 [group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion]
 
 }
