MIFOSX-1552 war { ... war.finalizedBy(bootRepackage) } makes gradlew war produce an executable WAR, just like standard gradlew build does (this resolves the problem mentioned in the PS on http://blog2.vorburger.ch/2014/09/mifos-executable-war-with-mariadb4j.html)
Signed-off-by: Michael Vorburger <mike@vorburger.ch>

--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -201,6 +201,7 @@ task deployPentahoReports() {
 
 war {
     it.dependsOn deployPentahoReports
+    war.finalizedBy(bootRepackage)
 }
 
 license {
