.travis.yml config to cache Gradle/Maven repos (~/.m2 & .gradle) This will lead to faster PR builds, and more importantly more reliable ones, as we should have less bad PRs due to spurious build failures due to unreachable http://repository.pentaho.org. With Doc + cache APT too (just as an example for later NPM builds)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+# This (sudo: false) is needed to "run on container-based infrastructure" on which cache: is available
+# http://docs.travis-ci.com/user/workers/container-based-infrastructure/
+sudo: false
 language: java
 jdk:
   - openjdk7
@@ -9,3 +12,9 @@ notifications:
 # @see http://gradle.1045684.n5.nabble.com/Plain-console-output-td5710237.html
 env:
   - TERM=dumb
+# http://docs.travis-ci.com/user/caching/#Arbitrary-directories
+cache:
+  apt: true
+  directories:
+  - $HOME/.gradle
+  - $HOME/.m2
