MIFOSX-1738 should include unit test cases

--- a/mifosng-provider/build.gradle
+++ b/mifosng-provider/build.gradle
@@ -158,6 +158,11 @@ sourceSets {
             exclude '**/EmbeddedTomcatWithSSLConfiguration.java'
         }
     }
+    test {
+    	java {
+    		exclude '**/core/boot/tests/**'
+    	}
+    }
 }
 }
 
