MIFOSX-1939, Modified reports

--- a/mifosng-provider/src/main/pentahoReports/Client Saving Transactions.properties
+++ b/mifosng-provider/src/main/pentahoReports/Client Saving Transactions.properties
@@ -10,4 +10,8 @@ lable.title.Transaction.from=From :
 lable.title.Saving.Transaction.To= To :
 lable.title.Client.Name=Client Name
 lable.title.Savings.Account.Name/No=Account Name/No
+lable.title.Branch=Branch
+lable.title.Staff=Staff
+lable.title.Interest=Interest Rate
+lable.title.Balance=Balance
 
