--- a/fineract-provider/dev-dependencies.gradle
+++ b/fineract-provider/dev-dependencies.gradle
@@ -40,13 +40,14 @@ dependencies {
                 [group: 'com.google.guava', name: 'guava', version: '15.0'],
 
                 [group: 'joda-time', name: 'joda-time', version: '2.4'],
-                [group: 'net.sourceforge.javacsv', name: 'javacsv', version: '2.0'],
+                //[group: 'net.sourceforge.javacsv', name: 'javacsv', version: '2.0'],
                 [group: 'org.apache.commons', name: 'commons-email', version: '1.3.3'],
                 [group: 'org.apache.commons', name: 'commons-lang3', version: '3.3.2'],
 
                 // no slf4j & logback here (anymore), as spring-boot-starter-logging already brings this now, better assembled (log4j-over-slf4j was originally forgotten here)
 
-                [group: 'mysql', name: 'mysql-connector-java', version: '5.1.27'],
+                //[group: 'mysql', name: 'mysql-connector-java', version: '5.1.27'],
+                [group: 'org.drizzle.jdbc', name: 'drizzle-jdbc', version: '1.3'],
                 [group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: tomcatVersion],
 
                
