--- a/fineract-provider/src/main/resources/META-INF/spring/jdbc.properties
+++ b/fineract-provider/src/main/resources/META-INF/spring/jdbc.properties
@@ -17,5 +17,7 @@
 # under the License.
 #
 
-spring.profiles.default=basicauth
-spring.profiles.active=oauth
+DRIVERCLASS_NAME:org.drizzle.jdbc.DrizzleDriver
+PROTOCOL:jdbc
+SUB_PROTOCOL:mysql:thin
+PORT:3306
