Switch back to MySQL as drizzle having lot of issues

--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -222,7 +222,7 @@ configurations {
     driver
 }
 dependencies {
-    driver 'org.drizzle.jdbc:drizzle-jdbc:1.3'
+    driver 'mysql:mysql-connector-java:5.1.16'
 }
 
 URLClassLoader loader = GroovyObject.class.classLoader
@@ -232,17 +232,17 @@ configurations.driver.each {File file ->
 
 task createDB<<{
     description= "Creates the Database. Needs database name to be passed (like: -PdbName=someDBname)"
-    sql = Sql.newInstance( 'jdbc:mysql:thin://localhost:3306/', mysqlUser, mysqlPassword, 'org.drizzle.jdbc.DrizzleDriver' )
+    sql = Sql.newInstance( 'jdbc:mysql://localhost:3306/', mysqlUser, mysqlPassword, 'com.mysql.jdbc.Driver' )
     sql.execute( 'create database '+"`$dbName`" )
 }
 
 task dropDB<<{
     description= "Drops the specified database. The database name has to be passed (like: -PdbName=someDBname)"
-    sql = Sql.newInstance( 'jdbc:mysql:thin://localhost:3306/', mysqlUser, mysqlPassword, 'org.drizzle.jdbc.DrizzleDriver' )
+    sql = Sql.newInstance( 'jdbc:mysql://localhost:3306/', mysqlUser, mysqlPassword, 'com.mysql.jdbc.Driver' )
     sql.execute( 'DROP DATABASE '+"`$dbName`")
 }
 task setBlankPassword<<{
-    sql = Sql.newInstance( 'jdbc:mysql:thin://localhost:3306/', mysqlUser, mysqlPassword, 'org.drizzle.jdbc.DrizzleDriver' )
+    sql = Sql.newInstance( 'jdbc:mysql://localhost:3306/', mysqlUser, mysqlPassword, 'com.mysql.jdbc.Driver' )
     sql.execute('USE `mifosplatform-tenants`')
     sql.execute('UPDATE mifosplatform-tenants.tenants SET schema_server = \'localhost\', schema_server_port = \'3306\', schema_username = \'mifos\', schema_password = \'mysql\' WHERE id=1;')
 }
@@ -262,8 +262,8 @@ buildscript {
 
 
 flyway {
-    url = "jdbc:mysql:thin://localhost:3306/mifostenant-default"
-	driver = "org.drizzle.jdbc.DrizzleDriver"
+    url = "jdbc:mysql://localhost:3306/mifostenant-default"
+	driver = "com.mysql.jdbc.Driver"
     user = mysqlUser
     password = mysqlPassword
 }
@@ -277,8 +277,8 @@ task migrateTenantDB<<{
 		tenantDbName = rootProject.getProperty("dbName")
 	}
 	
-    flyway.url= "jdbc:mysql:thin://localhost:3306/$tenantDbName"
-	flyway.driver = "org.drizzle.jdbc.DrizzleDriver"
+    flyway.url= "jdbc:mysql://localhost:3306/$tenantDbName"
+	flyway.driver = "com.mysql.jdbc.Driver"
     flyway.locations= [filePath]
     /**We use ${ as the prefix for strecthy reporting, do not want them to be interpreted by Flyway**/
     flyway.placeholderPrefix = "\$\${"
@@ -294,8 +294,8 @@ task showTenantDBInfo<<{
 		tenantDbName = rootProject.getProperty("dbName")
 	}
 	
-    flyway.url= "jdbc:mysql:thin://localhost:3306/$tenantDbName"
-	flyway.driver = "org.drizzle.jdbc.DrizzleDriver"
+    flyway.url= "jdbc:mysql://localhost:3306/$tenantDbName"
+	flyway.driver = "com.mysql.jdbc.Driver"
     flyway.locations= [filePath]
     flywayInfo.execute()
 }
@@ -310,8 +310,8 @@ task migrateTenantListDB<<{
 		tenantsDbName = rootProject.getProperty("dbName")
 	}
 	
-    flyway.url= "jdbc:mysql:thin://localhost:3306/$tenantsDbName"
-	flyway.driver = "org.drizzle.jdbc.DrizzleDriver"
+    flyway.url= "jdbc:mysql://localhost:3306/$tenantsDbName"
+	flyway.driver = "com.mysql.jdbc.Driver"
     flyway.locations= [filePath]
 
     flywayMigrate.execute()
@@ -326,8 +326,8 @@ task showTenantListDBInfo<<{
 		tenantsDbName = rootProject.getProperty("dbName")
 	}
     
-    flyway.url= "jdbc:mysql:thin://localhost:3306/$tenantsDbName"
-	flyway.driver = "org.drizzle.jdbc.DrizzleDriver"
+    flyway.url= "jdbc:mysql://localhost:3306/$tenantsDbName"
+	flyway.driver = "com.mysql.jdbc.Driver"
     flyway.locations= [filePath]
     flywayInfo.execute()
 }
@@ -341,8 +341,8 @@ task repairTenantDB<<{
         tenantsDbName = rootProject.getProperty("dbName")
     }
     
-    flyway.url= "jdbc:mysql:thin://localhost:3306/$tenantsDbName"
-	flyway.driver = "org.drizzle.jdbc.DrizzleDriver"
+    flyway.url= "jdbc:mysql://localhost:3306/$tenantsDbName"
+	flyway.driver = "com.mysql.jdbc.Driver"
     flyway.locations= [filePath]
     flywayRepair.execute()
 }
