--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -125,7 +125,7 @@ license {
 }
 
 task licenseFormatBuildScripts (type:nl.javadude.gradle.plugins.license.License) {
-    source = fileTree(dir: '../', includes: ['**/*.bat', '**/*.sh'])
+    source = fileTree(dir: '../', includes: ['**/*.bat', '**/*.sh', '**/*.sql'])
 }
 licenseFormat.dependsOn licenseFormatBuildScripts
 
