--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -2,7 +2,6 @@ description = '''\
 Run as:
 gradle clean tomcatrunwar
 '''
-
 buildscript {
   repositories {
   	 jcenter()
@@ -49,9 +48,12 @@ repositories {
 }
 
 configurations {
+	hibernateDependencies
 	providedRuntime // needed for Spring Boot executable WAR
     providedCompile
-	compile
+	compile() {
+		exclude module: 'hibernate-entitymanager'		
+	}
 	runtime
 	all*.exclude group: 'commons-logging'
 }
@@ -116,6 +118,11 @@ task dist(type:Zip){
 
 war {
     war.finalizedBy(bootRepackage)
+	if (project.hasProperty('buildType') && project.getProperty('buildType') == 'TEST') {
+		from(configurations.hibernateDependencies) { // notice the parens
+        	into "WEB-INF/lib/" // no leading slash
+    }
+	}
 }
 
 license {
@@ -175,6 +182,7 @@ sourceSets {
  integrationTest {
     	compileClasspath += main.output + test.output
         runtimeClasspath += main.output + test.output
+        runtimeClasspath += configurations.hibernateDependencies
     }
 }
 
@@ -190,8 +198,6 @@ task integrationTest(type:Test){
         tomcatRunWar.daemon = true
         tomcatRunWar.execute()
     }
-
-
     testClassesDir = project.sourceSets.integrationTest.output.classesDir
     classpath = project.sourceSets.integrationTest.runtimeClasspath
 }
@@ -207,6 +213,16 @@ configurations {
 }
 dependencies {
     driver 'org.drizzle.jdbc:drizzle-jdbc:1.3'
+    hibernateDependencies(
+    [group:'org.springframework.boot', name:'spring-boot-starter-data-jpa', version:'1.1.6.RELEASE'],
+    ) 
+}
+
+test {
+	filter {
+        //includeTestsMatching "org.apache.fineract.infrastructure.configuration.spring.SpringConfigurationTest.*"
+        includeTestsMatching "org.apache.fineract.template.TemplateMergeServiceTest.*"
+    }
 }
 
 URLClassLoader loader = GroovyObject.class.classLoader
