--- a/fineract-provider/dependencies.gradle
+++ b/fineract-provider/dependencies.gradle
@@ -19,7 +19,7 @@ dependencies {
                 [group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion],
                 [group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion],
                 [group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: springBootVersion],
-
+				[group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.0'],
                 [group: 'org.springframework', name: 'spring-context-support', version: springVersion],
 				
 	       		[group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: springOauthVersion],
@@ -70,7 +70,7 @@ dependencies {
                 // it's useful to have this for the Spring Boot TestRestTemplate http://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/#boot-features-rest-templates-test-utility
                 [group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.3.5'],
                 // Once we've switched to Java 8 this dep can be removed.
-                [group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.0']
+                //[group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.0']
      )
      testCompile 'junit:junit:4.11',
                  'junit:junit-dep:4.11',
