Corrections to cashier report

--- a/fineract-provider/src/main/pentahoReports/Daily Teller Cash Report (Pentaho).properties
+++ b/fineract-provider/src/main/pentahoReports/Daily Teller Cash Report (Pentaho).properties
@@ -1,4 +1,4 @@
-reportHeader.=Cashier Transaction Summary
+reportHeader.=Daily Teller Cash Report
 title.=Row Title
 value.=Row Value
 verification.=Verification
