Align Gradle version with requirements, also avoiding the need to download the gradle-warapper.jar

--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -391,3 +391,7 @@ springBoot {
 bootRepackage {
     mainClass = 'org.apache.fineract.ServerWithMariaDB4jApplication'
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.10'
+}
