Adding idea files in rat exclusion list

--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -96,12 +96,13 @@ rat {
 	'**/template.mustache',
 	'**/.classpath',
 	'**/.project',
-	'.idea/**',
+	'**/.idea/**',
 	'**/.settings/**',
 	'**/bin/**',
-	'.git/**',
+	'**/.git/**',
     '**/.gitignore',
     '**/.gitkeep',
+	'**/*.iml',
 		
     // gradle
     '**/.gradle/**',
