--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -66,7 +66,7 @@ project.ext.mysqlPassword='mysql'
 
 
 group = 'org.apache.fineract'
-
+buildDir = new File(rootProject.projectDir, "../build")
 repositories {
 	jcenter()
 	// mavenLocal() // useful for local dev using MariaDB4j SNAPSHOTs (not needed for real-world non-SNAPHOT builds)
@@ -85,7 +85,7 @@ rat {
   htmlOutput = false
   plainOutput = true
   verbose = true 
-  inputDir = './..'
+//  inputDir = './..'
  excludes = [
 	'**/licenses/**',
 	'**/*.md',
