--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -66,7 +66,7 @@ project.ext.mysqlPassword='mysql'
 
 
 group = 'org.apache.fineract'
-
+buildDir = new File(rootProject.projectDir, "../build")
 repositories {
 	jcenter()
 	// mavenLocal() // useful for local dev using MariaDB4j SNAPSHOTs (not needed for real-world non-SNAPHOT builds)
@@ -84,8 +84,9 @@ rat {
   xmlOutput = false
   htmlOutput = false
   plainOutput = true
-  verbose = true 
-  inputDir = './..'
+  verbose = false 
+//  inputDir = './..'
+  reportDir = new File(buildDir,'reports/rat')
  excludes = [
 	'**/licenses/**',
 	'**/*.md',
