FINERACT-402-Integrate PMD and Findbugs with Fineract

--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -49,6 +49,8 @@ apply plugin: 'tomcat'
 apply plugin: 'project-report'
 apply plugin: 'java'
 apply plugin: 'openjpa'
+apply plugin: 'pmd'
+apply plugin: 'findbugs'
 
 /* define the valid syntax level for source files */
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -242,6 +244,14 @@ task dist(type:Zip){
 
 compileJava{
     dependsOn rat
+}
+pmd {
+    sourceSets = [sourceSets.main]
+    ignoreFailures = true
+}
+findbugs {
+    ignoreFailures = true
+    sourceSets = [sourceSets.main] 
 }
 
 war {
