update .gitignore to ignore intellij metadata

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,29 @@
 *.ear
 .gradle
 build
+.idea
+*.iws
+*.ipr
+*.iml
+*.DS_Store
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Cursive Clojure plugin
+.idea/replstate.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+
