FINRACT-456 Javadoc generation possible now

--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -92,6 +92,7 @@ rat {
  excludes = [
 	'**/licenses/**',
 	'**/*.md',
+	'**/MANIFEST.MF',
 	'**/*.txt',
 	'**/*.log',
 	'**/fineractdev-eclipse-preferences.epf',
