--- a/fineract-provider/gradle.properties
+++ b/fineract-provider/gradle.properties
@@ -16,7 +16,7 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-releaseVersion=0.3.2-incubating
+releaseVersion=1.0.0
 buildType=BUILD
 
 
